--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,17 @@
 			<type>maven-plugin</type>
 		</dependency>
 	</dependencies>
+	
+	<reporting>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-report-plugin</artifactId>
+				<version>3.0.0-M3</version>
+			</plugin>
+		</plugins>
+	</reporting>
+	
 	<build>
 		<plugins>
 			<plugin>
